# AI-ML_Engineer_Intern_Saket_Kumar_Singh-_March2026

./: .gitignore  README.md  pyproject.toml
Documents/: README.md
RAG_usingLangChain/: Building model.ipynb
RAG_usingLangChain/credit_system/: index.faiss  index.pkl
course_planner_crew/: README.md  pyproject.toml
course_planner_crew/src/course_planning_crew/: main.py
course_planner_crew/src/course_planning_crew/config/: agents.yaml
src/course_planning_crew/: crew.py  main.py
src/course_planning_crew/config/: agents.yaml  tasks.yaml
src/course_planning_crew/tools/: custom_tool.py
