[project]
name = "course_planning_crew"
version = "0.1.0"
description = "course_planning_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.12.2",
    "crewai[google-genai,tools]==1.12.2",
    "langchain>=1.2.13",
    "langchain",
    "langchain-community",
    "faiss-cpu",
    "langchain-huggingface",
    "sentence-transformers>=5.3.0",
]

[project.scripts]
course_planning_crew = "course_planning_crew.main:run"
run_crew = "course_planning_crew.main:run"
train = "course_planning_crew.main:train"
replay = "course_planning_crew.main:replay"
test = "course_planning_crew.main:test"
run_with_trigger = "course_planning_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
